# particles_pipeline_gpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_results.ipynb  gen_results.py  gen_results_new.ipynb  gen_results_new.py  gen_results_save.ipynb  requirements.txt  results.csv  results_strong.csv  results_weak.csv  visualise.py
docs/: structure.md
libs/: CMakeLists.txt
libs/helper/: CMakeLists.txt
libs/helper/include/: file_handling.hpp  helper.hpp  logging.hpp  particle_types.hpp  particles_cpu.hpp  particles_gpu.hcu  particles_types.hpp  utils.hpp
libs/helper/src/: file_handling.cpp  helper.cpp  helper_gpu.cu  particles_cpu.cpp  particles_gpu.cu  utils.cpp
scripts/: compile.sh  debug_run_program.sh  exp_gpu_12359470.err  exp_gpu_12359470.out  load_modules.sh  load_modules_cpu.sh  load_modules_gpu.sh  particle_file_gpu_n1_total1000  particle_file_gpu_n2_total1500  particle_file_gpu_n4_total2500  run_all_jobs.sh  run_cpu_experiment.sh  run_cpu_jobs.sh  run_experiment.sh  run_experiments.sh  run_gpu_experiment.sh  run_gpu_jobs.sh  run_gpu_program.sh  run_jobs.sh  run_program.sh  setup_env.sh  setup_py_env.sh  test.sh
scripts/.ipynb_checkpoints/: load_modules-checkpoint.sh
scripts/cpu_logdir_s69_mstrong/: exp_pp3_cpu1_seed69_modestrong14076973.out  exp_pp3_cpu2_seed69_modestrong14076974.out  exp_pp3_cpu4_seed69_modestrong14076975.out  exp_pp3_cpu6_seed69_modestrong14076976.out
scripts/cpu_logdir_s69_mweak/: exp_pp3_cpu1_seed69_modeweak14076969.out  exp_pp3_cpu2_seed69_modeweak14076970.err  exp_pp3_cpu2_seed69_modeweak14076970.out  exp_pp3_cpu4_seed69_modeweak14076971.out  exp_pp3_cpu6_seed69_modeweak14076972.out
scripts/tests/: call_tests_cpu.sh  run_all_tests.sh  run_tests_cpu.sh  verify_par_file.py
src/: CMakeLists.txt  cpu_main_particles.cpp  gpu_main_particles.cpp  gpu_main_particles.cu  gpu_mpi_main_particles.cu  helper.cpp  helper.hpp  main.cpp
